clusters/main/kubernetes/system/networkpolicies/app/apps-homepage-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway-homepage
  namespace: apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: homepage
      app.kubernetes.io/name: homepage
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
